my-project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-project
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-project
  template:
    metadata:
      labels:
        app: my-project
    spec:
      containers:
      - name: my-project
        image: haydar26/my-project:REPLACE_WITH_SHA
        ports:
        - containerPort: 3000
