my-project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-project-service
  namespace: project
spec:
  selector:
    app: my-project
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80         # Service port inside cluster
      targetPort: 3000 # Port your container listens on
  type: ClusterIP
