my-project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-project-ingress
spec:
  rules:
  - http: # <--- The hyphen indicates the start of a list item
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-project-service
            port:
              number: 80
